# pose2audio

./: .gitignore  README.md  __main__.py  config.py  current.py  pyproject.toml  requirements.txt
audio/: conv_overlap_save.py  engine.py  source.py
bridge/Pose2Audio.KinectBridge/: BridgeOptions.cs  IPoseSink.cs  IPoseSource.cs  MockPoseSource.cs  PosePacketEncoder.cs  PoseSample.cs  Program.cs  README.md  StdinJsonPoseSource.cs  UdpPoseSink.cs
bridge/Pose2Audio.KinectBridge.KinectSdk/: Program.cs  README.md
bridge/Pose2Audio.KinectBridge.KinectSdk.HD/: Pose2Audio.KinectBridge.KinectSdk.HD.csproj  Program.cs  README.md
bridge/VisualSound.KinectBridge/: BridgeOptions.cs  IPoseSink.cs  IPoseSource.cs  MockPoseSource.cs  PosePacketEncoder.cs  Program.cs  (+4 more)
bridge/VisualSound.KinectBridge.KinectSdk/: Program.cs  README.md  VisualSound.KinectBridge.KinectSdk.csproj
bridge/VisualSound.KinectBridge.KinectSdk.HD/: Program.cs  README.md  VisualSound.KinectBridge.KinectSdk.csproj
configs/: camera_3d.yaml  kinect_3d.yaml  kinect_open3d.yaml  startKinect.ps1
control/: acoustic_frame_provider.py  controller.py  direction_provider.py  display_provider.py  pose.py  pose_provider.py  source_provider.py
hrtf/: selector.py  sofa_db.py
math3d/: coords.py  quaternion.py
pose_providers/: __init__.py  kinect_v2_pose.py  mediapipe_cam.py  toycv_tk.py
tests/: test_acoustic_frame_provider.py  test_config.py  test_controller_6d.py  test_conv_overlap_save.py  test_coords.py  test_direction_provider.py  test_geometry_pipeline_camera_source.py  test_kinect_bridge_pose.py  test_pose_provider_defaults.py  test_quaternion.py  test_sofa_db.py  test_source_provider.py
ui/: __init__.py  kinect_v2_pose.py  mediapipe_cam.py  toycv_tk.py
