[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pose2audio"
version = "0.1.0"
description = "Real-time head-tracked binaural spatial audio demo"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "numpy>=1.21.0",
  "sounddevice",
  "netCDF4",
  "soundfile",
  "mediapipe>=0.10.0",
  "opencv-python",
  "open3d>=0.19.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
pose2audio = "Pose2Audio.current:main"

[tool.setuptools]
packages = [
  "Pose2Audio",
  "Pose2Audio.audio",
  "Pose2Audio.control",
  "Pose2Audio.hrtf",
  "Pose2Audio.math3d",
  "Pose2Audio.pose_providers",
  "Pose2Audio.ui",
]

[tool.setuptools.package-dir]
Pose2Audio = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
